Changed Resume and fixed resume view on mobile

--- a/css/resume.css
+++ b/css/resume.css
@@ -8,7 +8,7 @@ body {
   max-width: 100vw;
 }
 
-embed {
+iframe {
   width: 100%;
   max-width: 100%;
   height: 100%;
